# Tensor-Puzzles

./: Tensor Puzzlers.ipynb  lib.py  pyproject.toml
